finished fission source; updated P1 for equations being present.

--- a/05-P1/P1.tex
+++ b/05-P1/P1.tex
@@ -33,7 +33,7 @@
 \usepackage[parfill]{parskip}
 
 \newif\ifeqns
-%\eqnstrue
+\eqnstrue
 
 % math syntax
 \newcommand{\nth}{n\ensuremath{^{\text{th}}} }
