finished fission src for now.

--- a/08-fission-src/fission-src.tex
+++ b/08-fission-src/fission-src.tex
@@ -212,10 +212,17 @@ We also know $L^2 = D/\Sigma_a$. Thus we can say
 \]
 If we compare this to our eigenvalue equation
 \[
-\nabla^2 \psi + B^s \psi(\vec{r}) = 0\:,
+\nabla^2 \psi + B^2 \psi(\vec{r}) = 0\:,
 \]
 we can see that the system will only be critical when
 \[
-B^2 = \frac{k_{\infty} - 1}{L^2} = B_m^2
+B^2 = \frac{k_{\infty} - 1}{L^2} = B_m^2 \:.
 \]
+
+Another way to say all of this is that when $\lambda = 0$ we get $B_g^2$ and when $B_g^2 = B_m^2$ we also know $k=1$. Thus, these criticality conditions are all equivalent. Note also that 
+\[
+k = \frac{\nu \Sigma_f/\Sigma_a}{1+ L^2 B^2} \:.
+\]
+
+
 \end{document}
