added details about chp numbers to some lectures.

--- a/06-de-soln/greens-efunc.tex
+++ b/06-de-soln/greens-efunc.tex
@@ -57,7 +57,7 @@ October 5, 2017
 }
 \end{center}
 
-Duderstadt and Hamilton Chp.\ 5.
+Duderstadt and Hamilton Chp.\ 5.II.A
 
 ** In these notes, $\psi$ is a generic function, the the angular flux **
 
