--- a/08-fission-src/fission-src.tex
+++ b/08-fission-src/fission-src.tex
@@ -58,7 +58,7 @@ October 6, 2017
 }
 \end{center}
 
-Duderstadt and Hamilton Chp.\ 5.
+Duderstadt and Hamilton Chp.\ 5.III B and C
 
 So far we have looked at fixed source diffusion problems and methods for solving them analytically (note: numerical solution is the focus of 155 for DE and 255 for TE). Frequently, we care about systems with fission. We'll focus on that next.
 
